@@ -302,10 +302,13 @@ enum sldns_enum_rdf_type
         LDNS_RDF_TYPE_PERIOD,
         /** tsig time 48 bits */
         LDNS_RDF_TYPE_TSIGTIME,
-	/** skip 21 unused */
+	/** Represents the Public Key Algorithm, HIT and Public Key fields
+	    for the HIP RR types.  A HIP specific rdf type is used because of
+	    the unusual layout in wireformat (see RFC 5205 Section 5) */
+	LDNS_RDF_TYPE_HIP,
         /** variable length any type rdata where the length
             is specified by the first 2 bytes */
-        LDNS_RDF_TYPE_INT16_DATA = 22,
+        LDNS_RDF_TYPE_INT16_DATA,
         /** protocol and port bitmaps */
         LDNS_RDF_TYPE_SERVICE,
         /** location data */
