@@ -1,3 +1,6 @@
+6 February 2014: Wouter
+	- sldns has type HIP.
+
 5 February 2014: Wouter
 	- Fix sldns parse tests on osx.
 
